--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>骑手请假系统 - 用户首页</title>
+    <title>讨生活&Team - 用户首页</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-3">
-                    <img src="assets/logo.png" alt="Logo" class="w-8 h-8">
-                    <h1 class="text-xl font-bold">骑手请假系统</h1>
+                    <img src="assets/logo.svg" alt="讨生活&Team Logo" class="w-8 h-8">
+                    <h1 class="text-xl font-bold">讨生活&Team</h1>
                 </div>
                 <div class="flex items-center space-x-4">
                     <span id="userName" class="font-medium">欢迎，用户</span>
@@ -48,9 +48,18 @@
                         <input type="number" id="leaveDays" min="0.5" step="0.5" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="请输入请假天数" required>
                     </div>
                 </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">开始日期</label>
-                    <input type="date" id="startDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">开始日期</label>
+                        <input type="date" id="startDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">结束日期</label>
+                        <input type="date" id="endDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    </div>
+                </div>
+                <div class="text-sm text-gray-600">
+                    <span id="dateInfo">请选择开始和结束日期，系统将自动计算请假天数</span>
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">请假原因</label>
