更新系统： - 系统名称改为'讨生活&Team' - 更新logo图片 - 修复日期显示问题，显示完整请假时间段 - 添加实时日期计算和验证功能

--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>讨生活&Team - 管理员后台</title>
+    <title>骑手请假系统 - 管理员后台</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-3">
-                    <img src="assets/logo.svg" alt="讨生活&Team Logo" class="w-8 h-8">
-                    <h1 class="text-xl font-bold">讨生活&Team - 管理员后台</h1>
+                    <img src="assets/logo.png" alt="Logo" class="w-8 h-8">
+                    <h1 class="text-xl font-bold">骑手请假系统 - 管理员后台</h1>
                 </div>
                 <div class="flex items-center space-x-4">
                     <span id="adminName" class="font-medium">管理员</span>
