--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>讨生活&Team - 请假管理系统</title>
+    <title>骑手请假系统 - 登录</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,11 +13,11 @@
         <div class="bg-white rounded-lg shadow-xl p-8">
             <!-- Logo和标题 -->
             <div class="text-center mb-8">
-                <div class="mx-auto w-20 h-20 mb-4">
-                    <img src="assets/logo.svg" alt="讨生活&Team Logo" class="w-full h-full">
+                <div class="mx-auto w-20 h-20 bg-blue-600 rounded-full flex items-center justify-center mb-4">
+                    <img src="assets/logo.png" alt="Logo" class="w-12 h-12">
                 </div>
-                <h1 class="text-3xl font-bold text-gray-800 mb-2">讨生活&Team</h1>
-                <p class="text-gray-600">请假管理系统 - 请登录您的账户</p>
+                <h1 class="text-3xl font-bold text-gray-800 mb-2">骑手请假系统</h1>
+                <p class="text-gray-600">请登录您的账户</p>
             </div>
 
             <!-- 登录表单 -->
