--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>讨生活&Team - 用户首页</title>
+    <title>讨生活&Team - 请假系统</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-3">
-                    <img src="assets/logo.svg" alt="讨生活&Team Logo" class="w-8 h-8">
+                    <img src="1.jpeg" alt="讨生活&Team Logo" class="w-10 h-10 rounded-full">
                     <h1 class="text-xl font-bold">讨生活&Team</h1>
                 </div>
                 <div class="flex items-center space-x-4">
@@ -48,18 +48,19 @@
                         <input type="number" id="leaveDays" min="0.5" step="0.5" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="请输入请假天数" required>
                     </div>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-2">开始日期</label>
                         <input type="date" id="startDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-2">结束日期</label>
-                        <input type="date" id="endDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                        <input type="date" id="endDate" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 bg-gray-50" readonly>
                     </div>
-                </div>
-                <div class="text-sm text-gray-600">
-                    <span id="dateInfo">请选择开始和结束日期，系统将自动计算请假天数</span>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">请假天数</label>
+                        <input type="number" id="leaveDays" min="0.5" step="0.5" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="自动计算" readonly>
+                    </div>
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">请假原因</label>
